<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

	<Button
	    android:id="@+id/btnSignin"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/editPassword"
	    android:layout_alignRight="@+id/editPassword"
	    android:layout_below="@+id/editPassword"
	    android:layout_marginTop="47dp"
	    android:text="@string/signin_button_title" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_below="@+id/editPhone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:background="@drawable/text_line"
        android:ems="10"
        android:hint="@string/password_hint_signin"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/editPassword"
        android:layout_alignParentTop="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/text_line"
        android:ems="10"
        android:hint="@string/phone_number_hit"
        android:inputType="phone" />
    
	<Button
        android:id="@+id/btnSigninRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtFindPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/register_button_title" />
        
    <TextView
        android:id="@+id/txtFindPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/btnSignin"
        android:layout_below="@+id/btnSignin"
        android:layout_marginTop="19dp"
        android:text="@string/find_password_title" />

</RelativeLayout>
