<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.kuangneipro.activity.MapActivity" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <com.baidu.mapapi.map.MapView
            android:id="@+id/bmapView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:clickable="true" />
        
        <TextView
            android:id="@+id/state2"
            android:text=""
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="19dp"
            android:layout_marginStart="19dp"
            android:layout_marginRight="19dp"
            android:layout_marginEnd="19dp"
            android:layout_marginBottom="19dp"
            android:textColor="#505050"

            android:background="@drawable/map_text" />
        <!--             android:textColor="#1E5782" -->
        <Button
            android:id="@+id/startbutton"
            android:layout_above="@+id/state2"
            android:layout_toRightOf="@+id/wifibutton"
            android:layout_toLeftOf="@+id/gpsbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_marginLeft="19dp"
            android:layout_marginStart="19dp"
            android:layout_marginRight="19dp"
            android:layout_marginEnd="19dp"
            android:layout_marginBottom="19dp"
            android:background="@drawable/button_enter_style"
            android:textColor="#E6E6E6"
            android:text="@string/start_button" />

        <Button
            android:id="@+id/wifibutton"
            android:layout_above="@+id/state2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:textSize="16sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="38dp"
            android:layout_marginStart="38dp"
            android:layout_marginBottom="19dp"
            android:background="@drawable/button_style"
            android:textColor="#E6E6E6"
            android:text="@string/wifi_button" />
<!-- android:textColor="#505050" -->
        <Button
            android:id="@+id/gpsbutton"
            android:layout_above="@+id/state2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:textSize="16sp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="38dp"
            android:layout_marginEnd="38dp"
            android:layout_marginBottom="19dp"
            android:background="@drawable/button_style"
            android:textColor="#E6E6E6"
            android:text="@string/gps_button" />

    </RelativeLayout>
    
    <TextView
        android:id="@+id/state"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:lines="3"
        android:text="" />

</RelativeLayout>
