<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View 
        android:id="@+id/background"
        android:layout_width="match_parent"
	    android:layout_height="match_parent"/>
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
	    android:orientation="vertical" >
	    <ImageView
	        android:id="@+id/avatar"
	        android:layout_width="70dp"
	        android:layout_height="70dp"
	        android:layout_margin="24dp"
	        android:scaleType="centerCrop"
	        android:contentDescription="@null"/>
	    
	    <View 
	        android:layout_width="match_parent"
	        android:layout_height="1px"
	        android:background="@color/default_split_color"/>
	    
	    
	    <LinearLayout
	        android:id="@+id/name_layout"
	        android:layout_width="match_parent"
	        android:layout_height="70dp" 
	        android:orientation="vertical"
	        android:gravity="center">
	        
	      
	        <TextView 
		        android:id="@+id/name"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:textSize="16sp"
		        android:text="@string/name_title"/>
	        <RelativeLayout 
	            android:id="@+id/name_edit_layout"
	            android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:visibility="gone"
		        android:layout_gravity="center">
		        <ImageView 
		            android:id="@+id/name_submit"
		            android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_centerVertical="true"
					android:layout_marginRight="16dp"
			        android:src="@drawable/abc_ic_cab_done_holo_light"
			        android:contentDescription="@null"/>
			    <EditText 
			        android:id="@+id/name_edit"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="center"
			        android:layout_centerInParent="true"
			        android:maxLength="10"
			        android:textSize="16sp"
			        android:inputType="text"
			        android:hint="@string/name_title"/>
		    </RelativeLayout>
	    </LinearLayout>
	  
	    
	    <View 
	        android:layout_width="match_parent"
	        android:layout_height="1px"
	        android:background="@color/default_split_color"/>
	    
	    <LinearLayout
	        android:id="@+id/sex_layout"
	        android:layout_width="match_parent"
	        android:layout_height="70dp" 
	        android:orientation="vertical"
	        android:gravity="center" >
	        <TextView 
		        android:id="@+id/sex"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="16sp"
		        android:text="@string/sex_title"/>
	    </LinearLayout>
	    
	    
	     <View 
	        android:layout_width="match_parent"
	        android:layout_height="1px"
	        android:background="@color/default_split_color"/>
	    
	    <LinearLayout
	        android:id="@+id/birthday_layout"
	        android:layout_width="match_parent"
	        android:layout_height="70dp" 
	        android:orientation="vertical"
	        android:gravity="center">
	        <TextView 
		        android:id="@+id/birthday"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="16sp"
		        android:text="@string/birthday_title"/>
	    </LinearLayout>
	    
	   <View 
	        android:layout_width="match_parent"
	        android:layout_height="1px"
	        android:background="@color/default_split_color"/>
	    
	    <LinearLayout
	        android:id="@+id/sign_layout"
	        android:layout_width="match_parent"
	        android:layout_height="70dp" 
	        android:orientation="vertical"
	        android:gravity="center" >
	        <TextView 
		        android:id="@+id/sign"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="60dp"
		        android:layout_marginRight="60dp"
		        android:textSize="16sp"
		        android:text="@string/sign_title"/>
	        <RelativeLayout 
	            android:id="@+id/sign_edit_layout"
	            android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:visibility="gone"
		        android:layout_gravity="center">
			     <ImageView 
		            android:id="@+id/sign_submit"
		            android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_centerVertical="true"
					android:layout_marginRight="16dp"
			        android:src="@drawable/abc_ic_cab_done_holo_light"
			        android:contentDescription="@null"/>
			    <EditText 
			        android:id="@+id/sign_edit"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="16dp"
			        android:layout_marginRight="70dp"
			        android:layout_centerInParent="true"
			        android:maxLength="30"
			        android:textSize="16sp"
			        android:inputType="textMultiLine"
			        android:hint="@string/sign_title"/>
	        </RelativeLayout>
	    </LinearLayout>
	    <View 
	        android:layout_width="match_parent"
	        android:layout_height="1px"
	        android:background="@color/default_split_color"
	        android:layout_marginBottom="16dp"/>
	</LinearLayout>
    
</RelativeLayout>
